# rust_tools

./: .cursorignore  .gitignore  AGENTS.md  Cargo.toml  README.md  Rust AI Agent Development Foundation.md  clippy.toml
.cursor/: hooks.json
.cursor/commands/: develop-feature.md  resume-pipeline.md
.cursor/hooks/: pre_compact.sh  remind_lint.sh  session_start.sh
.cursor/prompts/: 01-research.md  02-plan.md  03-implement-step.md  04-adversarial-review.md
.cursor/rules/: agent-response-format.mdc  rpi-workflow.mdc  rust-architecture.mdc  rust-core-standards.mdc  slint-ui.mdc
.cursor/skills/adversarial-review/: SKILL.md
.cursor/skills/rpi-implement/: SKILL.md
.cursor/skills/rpi-research/: SKILL.md
.cursor/skills/rust-core/: SKILL.md
.cursor/skills/rust-debug/: SKILL.md
.cursor/skills/rust-lint-hunter/: SKILL.md
.github/workflows/: quality-gate.yml
core_domain/: Cargo.toml
core_domain/src/: error.rs  lib.rs  settings.rs  storage.rs  user.rs
docs/planning_docs/: README.md  adversarial_review.md  implementation_plan.md  implementation_research.md  research_report.json
infrastructure/: Cargo.toml
infrastructure/src/: in_memory_storage.rs  json_settings_store.rs  lib.rs
scripts/: lint_and_fmt.sh  orchestrate_review.sh  pipeline_init.sh  quality_gate.sh  run_ui_tests.sh  test_json.sh
ui_application/: Cargo.toml  build.rs
ui_application/src/: main.rs
ui_application/ui/: app-window.slint
ui_application/ui/components/: about-dialog.slint  status-badge.slint
ui_application/ui/views/: register-view.slint
(+40 files in other folders)
