[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Infrastructure adapters for the Rust UI agent foundation workspace"

[lints]
workspace = true

[dependencies]
core_domain = { path = "../core_domain" }
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
